# switchboard

./: .env.example  LICENSE  README.md  pyproject.toml
docs/adr/: 0001-fastapi-over-flask.md
learning-log/: 2026-W27-retro.md  README.md
src/switchboard/: app.py
